// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform in strip-only mode should throw an error when it encounters a module 1`] = `
"
  x TypeScript namespace declaration is not supported in strip-only mode
   ,----
 1 | module 'foo' {}
   : ^^^^^^^^^^^^^^^
   \`----
"
`;

exports[`transform in strip-only mode should throw an error when it encounters a namespace 1`] = `
"
  x TypeScript namespace declaration is not supported in strip-only mode
   ,----
 1 | namespace Foo {}
   : ^^^^^^^^^^^^^^^^
   \`----
"
`;

exports[`transform in strip-only mode should throw an error when it encounters an enum 1`] = `
"
  x TypeScript enum is not supported in strip-only mode
   ,----
 1 | enum Foo {}
   : ^^^^^^^^^^^
   \`----
"
`;

exports[`transform in strip-only mode should throw an error with a descriptive message when it encounters a decorator 1`] = `
"
  x Decorators are not supported
   ,----
 1 | class Foo { @decorator foo() {} }
   :             ^^^^^^^^^^
   \`----
"
`;

exports[`transform in transform mode should transpile enum 1`] = `
"var Foo;
(function(Foo) {})(Foo || (Foo = {}));
"
`;

exports[`transform should strip types 1`] = `
"export const foo = 1;
"
`;
